--- a/content/1.index.md
+++ b/content/1.index.md
@@ -9,7 +9,7 @@ Enjoy simple guides that can resolve many problems with modern technologies.
 
 ## Guides
 
-::prose-a{href="./how-to-create-a-site-github-pages"}
+::prose-a{href="how-to-create-a-site-github-pages"}
 ### [How to create a site with GitHub Pages]{.text-right}
 
 ![GitHub Pages logo](https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/collections/github-pages-examples/github-pages-examples.png){height="100" width="100"}
